Mon May 15 17:11:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- applied fixes from Charlene Herring (cf. "Problems when
	  using odbc : SQLPutData, SQLExecDirect,Decimals" 2006/05/14

Sun May 14 14:34:04 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/descriptor.c: fix memory error

Sat May 13 10:49:40 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/copydesc.c: improve

Mon May 08 11:38:30 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/descriptor.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/copydesc.c(added): add test for SQLCopyDesc

Fri Apr 21 17:10:00 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/sql2tds.c: use new tds_convert types

Fri Apr 21 09:45:56 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* doc/htdoc/faq.html: fix html compatibility

Thu Apr 20 12:10:28 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/unittests/ct_dynamic.c: remove leak in test

Tue Apr 17 19:47:57 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/ct.c: fix double free

Mon Apr 17 10:51:09 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/prepare_query.c:
	- use new conversion style in ODBC

Sun Apr 16 10:11:32 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/tds/locale.c src/tds/mem.c:
	- TDSLOCALE changes to keep ABI

Sat Apr 15 10:18:29 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsconvert.h 	* src/tds/convert.c:
	- add new type of conversion for copy optimizations

Sat Apr 15 10:02:20 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: fix for older Sybase versions
	* src/tds/config.c: optimize option read

Sat Apr 15 09:03:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: remove warning
